--- a/docs/api-reference/CRMScript.Native.StatLib.yml
+++ b/docs/api-reference/CRMScript.Native.StatLib.yml
@@ -3,26 +3,76 @@ items:
 - uid: CRMScript.Native.StatLib
   commentId: T:CRMScript.Native.StatLib
   id: StatLib
-  so.intellisense: Void.StatLib
   langs:
   - crmscript
   children:
+  - CRMScript.Native.StatLib.#ctor
+  - CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer)
   - CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer,Integer)
   - CRMScript.Native.StatLib.addCallback(Integer,String)
   - CRMScript.Native.StatLib.addGroup(Integer,Bool)
+  - CRMScript.Native.StatLib.addGroup(Integer,Bool,Bool)
   - CRMScript.Native.StatLib.dropOrder()
-  - CRMScript.Native.StatLib.execute()
+  - CRMScript.Native.StatLib.execute(Parser)
+  - CRMScript.Native.StatLib.execute(StatResult)
   - CRMScript.Native.StatLib.setGenericSearch()
   - CRMScript.Native.StatLib.setName(String)
   - CRMScript.Native.StatLib.setSearchEngine()
   - CRMScript.Native.StatLib.setSql(String)
   - CRMScript.Native.StatLib.setStringMatrix()
-  - CRMScript.Native.StatLib.#ctor()
   name: StatLib
   nameWithType: StatLib
   fullName: CRMScript.Native.StatLib
   type: Class
+  summary: "\nClass for using the Service statistics library.\n"
+  example: 
+- uid: CRMScript.Native.StatLib.#ctor
+  commentId: M:CRMScript.Native.StatLib.#ctor
+  id: '#ctor'
+  so.intellisense: Void.StatLib
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: StatLib.#ctor
+  fullName: CRMScript.Native.StatLib.#ctor
+  type: Constructor
   summary: 
+  remarks: 
+  syntax: 
+    content: StatLib
+  example: 
+- uid: CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer)
+  commentId: M:CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer)
+  id: 'addAggregate(Integer,Integer,String,String,Integer)'
+  so.intellisense: StatLib.addAggregate
+  langs:
+  - crmscript
+  name: 'addAggregate(Integer,Integer,String,String,Integer)'
+  nameWithType: StatLib.addAggregate(Integer,Integer,String,String,Integer)
+  fullName: CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer)
+  type: Method
+  summary: "\nAdds an aggregate function to the specified group<p></p>\nAn aggregate function is a function that is calculated for all values for a given column in a group. For example, the average response time for each category.\n"
+  remarks: "\nAvailable functions:<ul><li>Count</li><li>Sum</li><li>Avg</li><li>Max</li><li>Min</li></ul>\n"
+  syntax: 
+    content: Void addAggregateStatLib.addAggregate(Integer groupColumn, Integer column, String name, String type, Integer decimals, Integer uniqueColumn)
+    parameters:
+    - id: groupColumn
+      type: CRMScript.Global.Integer
+      description: The column used for grouping.
+    - id: column
+      type: CRMScript.Global.Integer
+      description: The column used for the calculation.
+    - id: name
+      type: CRMScript.Global.String
+      description: The name of the calculated variable in the Parser or StatResult
+    - id: type
+      type: CRMScript.Global.String
+      description: The type of function.
+    - id: decimals
+      type: CRMScript.Global.Integer
+      description: The number of decimals to use in the calculated value
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer,Integer)
   commentId: M:CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer,Integer)
@@ -34,10 +84,10 @@ items:
   nameWithType: StatLib.addAggregate(Integer,Integer,String,String,Integer,Integer)
   fullName: CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer,Integer)
   type: Method
-  summary: "\nCRMScript method in the StatLib class that add an aggregate function to the specified groupAdds an aggregate function to the specified group. An<strong>aggregate function</strong>is a function that is calculated for all values for a given column in a group. For example, the average response time for each category.<p></p>\nYou can optionally signal to calculate only for the rows that have a unique value in this column.\n"
-  remarks: "\n<h3>Available functions</h3><ul><li>Count</li><li>Sum</li><li>Avg</li><li>Max</li><li>Min</li></ul>\n"
+  summary: "\nAdds an aggregate function to the specified group<p></p>\nAn aggregate function is a function that is calculated for all values for a given column in a group. For example, the average response time for each category.\n"
+  remarks: "\nAvailable functions:<ul><li>Count</li><li>Sum</li><li>Avg</li><li>Max</li><li>Min</li></ul>\n"
   syntax: 
-    content: addAggregate()
+    content: Void addAggregateStatLib.addAggregate(Integer groupColumn, Integer column, String name, String type, Integer decimals, Integer uniqueColumn)
     parameters:
     - id: groupColumn
       type: CRMScript.Global.Integer
@@ -56,7 +106,9 @@ items:
       description: The number of decimals to use in the calculated value
     - id: uniqueColumn
       type: CRMScript.Global.Integer
-      description: Optional. The value is only calculated for the rows which have a unique value in this column.
+      description: The value is only calculated for the rows which have a unique value in this column.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.addCallback(Integer,String)
   commentId: M:CRMScript.Native.StatLib.addCallback(Integer,String)
@@ -68,17 +120,19 @@ items:
   nameWithType: StatLib.addCallback(Integer,String)
   fullName: CRMScript.Native.StatLib.addCallback(Integer,String)
   type: Method
-  summary: "\nAdd a callback. A callback is a PARSER-snippet which will be executed for the given column for each row. This is an old method. Use StatResult and iterate instead.\n"
-  remarks: 
+  summary: "\nAdds a callback. A callback is a PARSER-snippet that will be executed for the given column for each row.\n"
+  remarks: "\n This is an old method. Use StatResult and iterate instead.\n"
   syntax: 
-    content: addCallback(Integer column, String script)
+    content: Void addCallback(Integer column, String script)
     parameters:
     - id: column
       type: CRMScript.Global.Integer
-      description: 
+      description: The column for which this callback should be executed.
     - id: script
       type: CRMScript.Global.String
-      description: 
+      description: The Parser code to execute.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.addGroup(Integer,Bool)
   commentId: M:CRMScript.Native.StatLib.addGroup(Integer,Bool)
@@ -90,10 +144,10 @@ items:
   nameWithType: StatLib.addGroup(Integer,Bool)
   fullName: CRMScript.Native.StatLib.addGroup(Integer,Bool)
   type: Method
-  summary: "\nCRMScript method in the StatLib class that adds a group to the StatLib instanceAdds a group to the<code>StatLib</code>instance. A<strong>group</strong>is a subset of the results that have a common value for a given column. Aggregate values can be calculated for groups, for example,  the average response time per category.\n"
+  summary: "\nAdds a group to the StatLib instance. A group is a subset of the results that have a common value for a given column. Aggregate values can be calculated for groups, for example, the average response time per category.\n"
   remarks: 
   syntax: 
-    content: addGroup()
+    content: Void addGroup(Integer column, Bool desc)
     parameters:
     - id: column
       type: CRMScript.Global.Integer
@@ -101,6 +155,35 @@ items:
     - id: desc
       type: CRMScript.Global.Bool
       description: Sort order. True = descending, otherwise ascending
+    return:
+      type: CRMScript.Global.Void
+  example: 
+- uid: CRMScript.Native.StatLib.addGroup(Integer,Bool,Bool)
+  commentId: M:CRMScript.Native.StatLib.addGroup(Integer,Bool,Bool)
+  id: 'addGroup(Integer,Bool,Bool)'
+  so.intellisense: StatLib.addGroup
+  langs:
+  - crmscript
+  name: 'addGroup(Integer,Bool,Bool)'
+  nameWithType: StatLib.addGroup(Integer,Bool,Bool)
+  fullName: CRMScript.Native.StatLib.addGroup(Integer,Bool,Bool)
+  type: Method
+  summary: "\nAdds a group to the StatLib instance. A group is a subset of the results that have a common value for a given column. Aggregate values can be calculated for groups, for example, the average response time per category.\n"
+  remarks: 
+  syntax: 
+    content: Void addGroup(Integer column, Bool desc, Bool compareAsNumber)
+    parameters:
+    - id: column
+      type: CRMScript.Global.Integer
+      description: The column to used to identify the groups
+    - id: desc
+      type: CRMScript.Global.Bool
+      description: Sort order. True = descending, otherwise ascending
+    - id: compareAsNumber
+      type: CRMScript.Global.Bool
+      description: True if the value is a number and you want numeric sorting/grouping
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.dropOrder()
   commentId: M:CRMScript.Native.StatLib.dropOrder()
@@ -115,24 +198,52 @@ items:
   summary: "\nCalling this function will make the StatLib instance skip sorting the results in the groups.\n"
   remarks: 
   syntax: 
-    content: dropOrder()
-    parameters:
+    content: Void dropOrder()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.Native.StatLib.execute()
-  commentId: M:CRMScript.Native.StatLib.execute()
-  id: 'execute()'
+- uid: CRMScript.Native.StatLib.execute(Parser)
+  commentId: M:CRMScript.Native.StatLib.execute(Parser)
+  id: 'execute(Parser)'
   so.intellisense: StatLib.execute
   langs:
   - crmscript
-  name: 'execute()'
-  nameWithType: StatLib.execute()
-  fullName: CRMScript.Native.StatLib.execute()
+  name: 'execute(Parser)'
+  nameWithType: StatLib.execute(Parser)
+  fullName: CRMScript.Native.StatLib.execute(Parser)
   type: Method
-  summary: "\nCRMScript method in the Attachment class that runs the query and aggregations and stores the results in either a Parser or StatResultRuns the query and aggregation and stores the results. You can choose between storing in a Parser or a StatResult by passing the appropriate object.\n"
-  remarks: 
+  summary: "\nRuns the query and aggregations and stores the results in a Parser\n"
+  remarks: "\nYou can choose between storing in a Parser or a StatResult by passing the appropriate object.\n"
   syntax: 
-    content: execute()
+    content: Void execute(Parser parser)
     parameters:
+    - id: parser
+      type: CRMScript.Native.Parser
+      description: The instance to store the results in
+    return:
+      type: CRMScript.Global.Void
+  example: 
+- uid: CRMScript.Native.StatLib.execute(StatResult)
+  commentId: M:CRMScript.Native.StatLib.execute(StatResult)
+  id: 'execute(StatResult)'
+  so.intellisense: StatLib.execute
+  langs:
+  - crmscript
+  name: 'execute(StatResult)'
+  nameWithType: StatLib.execute(StatResult)
+  fullName: CRMScript.Native.StatLib.execute(StatResult)
+  type: Method
+  summary: "\nRuns the query and aggregations and stores the results in a StatResult\n"
+  remarks: "\nYou can choose between storing in a Parser or a StatResult by passing the appropriate object.\n"
+  syntax: 
+    content: Void execute(StatResult result)
+    parameters:
+    - id: result
+      type: CRMScript.Native.StatResult
+      description: The instance to store the results in
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setGenericSearch()
   commentId: M:CRMScript.Native.StatLib.setGenericSearch()
@@ -147,8 +258,13 @@ items:
   summary: "\nUse the given GenericSearch entry as query (instead of SQL string).\n"
   remarks: 
   syntax: 
-    content: setGenericSearch(GenericSearch gs)
+    content: Void setGenericSearch(GenericSearch gs)
     parameters:
+    - id: gs
+      type: CRMScript.Native.GenericSearch
+      description: The GenericSearch entry to use. 
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setName(String)
   commentId: M:CRMScript.Native.StatLib.setName(String)
@@ -163,11 +279,13 @@ items:
   summary: "\nSets the name for the instance. The name is used to prefix the result in the Parser.\n"
   remarks: 
   syntax: 
-    content: setName(String name)
+    content: Void setName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name for the instance.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setSearchEngine()
   commentId: M:CRMScript.Native.StatLib.setSearchEngine()
@@ -182,8 +300,13 @@ items:
   summary: "\nUse the given SearchEngine entry as query (instead of SQL string).\n"
   remarks: 
   syntax: 
-    content: setSearchEngine(SearchEngine se)
+    content: Void setSearchEngine(SearchEngine se)
     parameters:
+    - id: se
+      type: CRMScript.Native.SearchEngine
+      description: The SearchEngine entry to use.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setSql(String)
   commentId: M:CRMScript.Native.StatLib.setSql(String)
@@ -198,11 +321,13 @@ items:
   summary: "\nSets the query for the instance.\n"
   remarks: 
   syntax: 
-    content: setSql(String sqlStatement)
+    content: Void setSql(String sqlStatement)
     parameters:
     - id: sqlStatement
       type: CRMScript.Global.String
-      description: 
+      description: The SQL query to execute for the instance.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setStringMatrix()
   commentId: M:CRMScript.Native.StatLib.setStringMatrix()
@@ -217,23 +342,13 @@ items:
   summary: "\nUse the given StringMatrix entry as query (instead of SQL string).\n"
   remarks: 
   syntax: 
-    content: setStringMatrix(StringMatrix sm)
+    content: Void setStringMatrix(StringMatrix sm)
     parameters:
-  example: 
-- uid: CRMScript.Native.StatLib.#ctor()
-  commentId: M:CRMScript.Native.StatLib.#ctor()
-  id: '#ctor()'
-  so.intellisense: Void.StatLib
-  langs:
-  - crmscript
-  name: '#ctor()'
-  nameWithType: StatLib.#ctor()
-  fullName: CRMScript.Native.StatLib.#ctor()
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: StatLib
+    - id: sm
+      type: CRMScript.Native.StringMatrix
+      description: The StringMatrix entry to use.
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.StatLib
@@ -260,3 +375,33 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
+- uid: CRMScript.Native.Parser
+  commentId: T:CRMScript.Native.Parser
+  isExternal: true
+  name: Parser
+  nameWithType: Parser
+  fullName: CRMScript.Native.Parser
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
+- uid: CRMScript.Native.SearchEngine
+  commentId: T:CRMScript.Native.SearchEngine
+  isExternal: true
+  name: SearchEngine
+  nameWithType: SearchEngine
+  fullName: CRMScript.Native.SearchEngine
+- uid: CRMScript.Native.StatResult
+  commentId: T:CRMScript.Native.StatResult
+  isExternal: true
+  name: StatResult
+  nameWithType: StatResult
+  fullName: CRMScript.Native.StatResult
+- uid: CRMScript.Native.StringMatrix
+  commentId: T:CRMScript.Native.StringMatrix
+  isExternal: true
+  name: StringMatrix
+  nameWithType: StringMatrix
+  fullName: CRMScript.Native.StringMatrix
